added headings and styled

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       </nav>
     </header>
 
+    <h1>Developer, Artist, Builder.</h1>
+    <h3>Devoted to creation in all forms.</h3>
+    <h3 class="quote">"Butcher who back into meat grinder get a little behind on his orders."   -Confucius</h3>
   </div>   
 </body>
 </html>
