about page is good enough

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <span class="name">Rick Trahant</span>
       <nav class="links">
         <a class="active" href="/">HOME</a>
-        <a href="/about">ABOUT</a>
-        <a href="/portfolio">PORTFOLIO</a>
+        <a href="/about.html">ABOUT</a>
+        <a href="/portfolio.html">PORTFOLIO</a>
       </nav>
     </header>
 
