sending to github

--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
         <a href="/portfolio.html">PORTFOLIO</a>
       </nav>
     </div>
-    <div><main class="aboutmain"> <!-- this is just a personalized version of the example -->
+    <div><main class="aboutmain"> 
       <h1>
-        I'm always building or doing
+        I'm always building or doing...
       </h1>
       
       <section class="motormadness">
