looks like a winner!

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,27 @@
         <a href="/portfolio.html">PORTFOLIO</a>
       </nav>
     </div>
-
-    <h2 class="project-name"> The First Project</h2>
-      <div class="project">
-        
+  <div class="projects">
+    <h2 class="projectheader"> Here are some things I've built :)</h2>
+      <div class="project1">
+        <P>Bowls of Puppies!</P>
+        <img src="https://images.pexels.com/photos/8473449/pexels-photo-8473449.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+        <p>Doggo ipsum much ruin diet shoober maximum borkdrive fluffer very jealous pupper, mlem heckin. Long water shoob aqua doggo corgo, I am bekom fat. Many pats the neighborhood pupper heckin good boys boof very taste wow, heckin very jealous pupper length boy. Big ol pupper corgo many pats stop it fren blop borking doggo, length boy lotsa pats stop it fren. Aqua doggo snoot long water shoob corgo heckin angery woofer you are doing me the shock blop, extremely cuuuuuute he made many woofs you are doin me a concern noodle horse borking doggo. Vvv wow very biscit lotsa pats puggo porgo, maximum borkdrive long doggo.
+        </p>
       </div>
+      <div class="project2">
+        <P>Reacto Infacto</P>
+        <img src="https://images.pexels.com/photos/11035471/pexels-photo-11035471.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+        <p>Warrior going gold cheat code trickshot MMO barrel stuffing retrogaming AI. Ban Dragon Quest rocket jump Sprite Resident Evil 4 strategy guide AFK faceroll frame knock-back feeding Assassin's Creed Beat 'Em Up. Theorycraft backward compatible lag fps guard Sega Saturn Game Boy analog control debuff switchbox NBA Live. VAC farming AoE Microsoft noob trolling flip-screen Pokemon easter eggs Healer Magic Points (MP) flicker. PlayStation 4 advergame Tom Clancy's Ghost Recon LoL slow-down draw distance KK beta headshot. Screen-peeking multi-tap Batman: Arkham City PlayStation ghosting Super Mario PlayStation 2 Super Mario Galaxy Point-and-click pre-rendered graphics cheats. PlayStation3 GG ez level rekt Hacker Brain Age gamer turbo D-Pad.
+        </p>
+      </div>
+      <div class="project3">
+        <P>StoneCappin'</P>
+        <img src="https://images.pexels.com/photos/355863/pexels-photo-355863.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+    </div>
     
 </body>
 </html>
