added contact footer

--- a/about.html
+++ b/about.html
@@ -47,7 +47,15 @@
       </div>
     </main>
   </div>
-  </body>
-</html>
+ 
+  <footer>
+    <a href="https://facebook.com/" target ="_blank" >
+      <img class="media-link" src="/images/facebook.svg" alt="facebook icon"</a>
+    <a href="https://linkedin.com/" target ="_blank" >
+      <img class="media-link" src="images/linkedin.svg" alt="linkedin icon"</a>
+    <a href="https://tweeter.com/" target ="_blank" />
+      <img class="media-link" src="images/twitter.svg" alt="tweeter icon"</a>
+  </footer>  
+
 </body>
 </html>
