--- a/index.html
+++ b/index.html
@@ -21,5 +21,14 @@
     <h3>Devoted to creation in all forms.</h3>
     <h3 class="quote">"Butcher who back into meat grinder get a little behind on his orders."   -Confucius</h3>
   </div>   
+<!--Step one of Block 12, build the social media footer-->
+  <footer>
+    <a href="https://facebook.com/" target ="_blank" >
+      <img class="media-link" src="/images/facebook.svg" alt="facebook icon"</a>
+    <a href="https://linkedin.com/" target ="_blank" >
+      <img class="media-link" src="images/linkedin.svg" alt="linkedin icon"</a>
+    <a href="https://tweeter.com/" target ="_blank" />
+      <img class="media-link" src="images/twitter.svg" alt="tweeter icon"</a>
+  </footer>
 </body>
 </html>
