pretty close to what i want..footer needs debugging

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
         <a class="active" href="/">HOME</a>
         <a href="/about.html">ABOUT</a>
         <a href="/portfolio.html">PORTFOLIO</a>
+        <a href="/contact.html">CONTACT</a>
       </nav>
     </div>
   <div class="projects">
