--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-  <div class="nav"> <!-- this will be the parent div for the nav bar and my name -->
+  <div> <!-- this will be the parent div for the nav bar and my name -->
     <header>
       <span class="name">Rick Trahant</span>
-      <nav class="links">
+      <nav class="nav">
         <a class="active" href="/">HOME</a>
         <a href="/about.html">ABOUT</a>
         <a href="/portfolio.html">PORTFOLIO</a>
+        <a href="/contact.html">CONTACT</a>
       </nav>
     </header>
 
