i think that will suffice

--- a/about.html
+++ b/about.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">  
+    <link rel="stylesheet" href="./style.css">  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <div class="nav">      <span class="name">Rick Trahant</span>
+    <div class="nav">      
+      <span class="name">Rick Trahant</span>
       <nav class="links">
         <a class="active" href="/">HOME</a>
         <a href="/about.html">ABOUT</a>
@@ -15,7 +16,7 @@
         <a href="/contact.html">CONTACT</a>
       </nav>
     </div>
-    <div><main class="aboutmain"> 
+    <main class="aboutmain"> 
       <h1>
         I'm always building or doing...
       </h1>
@@ -47,9 +48,7 @@
         <p>Eveniet illum illo explicabo ea amet expedita fugiat omnis excepturi dignissimos unde nam beatae consequuntur praesentium quas voluptas, doloremque nemo reiciendis consequatur sed ut officia soluta repellendus! Corporis, ex quo!</p>
       </div>
     </main>
-  </div>
- </body>
-
+  
  <footer>
   <a href="https://facebook.com/" target ="_blank" >
     <img class="media-link" src="/images/facebook.svg" alt="facebook icon"</a>
@@ -58,4 +57,5 @@
   <a href="https://tweeter.com/" target ="_blank" />
     <img class="media-link" src="images/twitter.svg" alt="tweeter icon"</a>
 </footer>
+</body>
 </html>
