--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
   <div> <!-- this will be the parent div for the nav bar and my name -->
-    <header>
+    <div class="nav">
       <span class="name">Rick Trahant</span>
-      <nav class="nav">
-        <a class="active" href="/">HOME</a>
-        <a href="/about.html">ABOUT</a>
-        <a href="/portfolio.html">PORTFOLIO</a>
-        <a href="/contact.html">CONTACT</a>
+      <nav class="links">
+          <a class="active" href="/">HOME</a>
+          <a href="/about.html">ABOUT</a>
+          <a href="/portfolio.html">PORTFOLIO</a>
+          <a href="/contact.html">CONTACT</a>
       </nav>
-    </header>
+  </div>
 
     <h1>Developer, Artist, Builder.</h1>
     <h3>Devoted to creation in all forms.</h3>
