--- a/contact.html
+++ b/contact.html
@@ -1,48 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-
-        form {
-            max-width: 600px;
-            margin: auto;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 8px;
-        }
-
-        input, textarea {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 16px;
-            box-sizing: border-box;
-        }
-
-        textarea {
-            resize: vertical;
-        }
-
-        input[type="submit"] {
-            background-color: #4caf50;
-            color: white;
-            cursor: pointer;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-
-   </style>
 </head>
 <body>
 
@@ -56,9 +18,9 @@
         </nav>
     </div>
 
-   <h1 style="text-align: center;">Contact me :)</h1>
+   <h1 style="text-align: center;">Send me a Message</h1>
    
-    <form action="submit_form.php" method="post">
+    <form action="thankyou.html" method="post">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
 
